--- a/gpx-viewer.html
+++ b/gpx-viewer.html
@@ -1,30 +1,15 @@
-<div id="map" style="height: 450px; width: 100%;"></div>
+<div class="gpx-viewer">
+  <div class="map" style="height:450px;width:100%"></div>
 
-<div style="display: flex; flex-wrap: wrap; gap: 10px; margin: 10px 0;">
-  <button id="recenterBtn">🔄 Recentrer</button>
-  <button id="downloadBtn">⬇️ Télécharger le GPX</button>
+  <div style="display:flex;flex-wrap:wrap;gap:10px;margin:10px 0">
+    <button class="recenter">🔄 Recentrer</button>
+    <button class="download">⬇️ Télécharger le GPX</button>
+  </div>
+
+  <div style="margin-top:15px">
+    <svg class="profile" width="100%" height="180"
+         viewBox="0 0 1000 180" preserveAspectRatio="none"></svg>
+  </div>
+
+  <div class="stats" style="font-weight:bold;margin:10px 0"></div>
 </div>
-
-<div id="profile-container" style="margin-top: 15px;">
-  <svg id="profile" width="100%" height="180" viewBox="0 0 1000 180" preserveAspectRatio="none"></svg>
-</div>
-
-<div id="stats" style="font-weight: bold; margin: 10px 0;"></div>
-
-<script>
-(function () {
-  const container = document.currentScript.closest("[data-gpx]");
-  if (!container) {
-    console.error("Attribut data-gpx manquant");
-    return;
-  }
-
-  const file = container.dataset.gpxFile;
-  const gpxUrl = "https://raw.githubusercontent.com/bouquetinboiteux-create/gpx/main/" + file;
-
-  // rendre dispo pour leaflet_gpx.js
-  window.GPX_URL = gpxUrl;
-})();
-</script>
-
-<script src="https://cdn.jsdelivr.net/gh/bouquetinboiteux-create/scripts_blogger_bouquetin_boiteux@main/leaflet_gpx.js"></script>
